the Fhird commit

--- a/Checkout.html
+++ b/Checkout.html
@@ -43,133 +43,48 @@
             <a class="header__new-navi-pink" href="#">New Arrivals</a>
         </div>
     </div>
-
-</div>
-<div class="meinblock container">
-    <div class="meinblock__titel">
-        <div>Product Details</div>
-        <div class="meinblock__titel-details">
-            <ul class="meinblock__titel-and">
-                <li>unite Price</li>
-                <li>Quantity</li>
-                <li>Shipping</li>
-                <li>Subtotal</li>
-                <li>Action</li>
-            </ul>
-        </div>
-    </div>
-    <div class="header-line"></div>
-    <div class="meinblock__product">
-        <div class="meinblock__product-Shirt">
-            <a class="meinblock__product-Shirt-foto" href="#"><img src="mainblock/Ti_Shirt1.jpg" height="115" width="100" alt="Ti-Shirt foto"/></a>
-            <div class="meinblock__product-Shirt-color">
-                <h3 class="MangoT-shirt">Mango People T-shirt</h3>
-                <div class="MangoT-shirt-show">
-                    <div class="Color-Red">Color: </div>
-                    <div class="Color-Size">Red</div>
-                </div>
-                <div class="MangoT-shirt-show">
-                    <div class="Color-Red">Size: </div>
-                    <div class="Color-Size">Xll</div>
-                </div>
-            </div>
-        </div>
-        <div class="meinblock__product-details">
-            <ul class="meinblock__titel-and">
-                <li>$150</li>
-                <li class="Quantity"><input class="input-Quantity" type="number"></li>
-                <li>Free</li>
-                <li>$300</li>
-                <li><i class="fas fa-times-circle delete"></i>
-                </li>
-            </ul>
-        </div>
-    </div>
-    <div class="header-line"></div>
-    <div class="meinblock__product">
-        <div class="meinblock__product-Shirt">
-            <a class="meinblock__product-Shirt-foto" href="#"><img src="mainblock/Ti_Shirt2.jpg" height="115" width="100" alt="Ti-Shirt foto"/></a>
-            <div class="meinblock__product-Shirt-color">
-                <h3 class="MangoT-shirt">Mango People T-shirt</h3>
-                <div class="MangoT-shirt-show">
-                    <div class="Color-Red">Color: </div>
-                    <div class="Color-Size">Red</div>
-                </div>
-                <div class="MangoT-shirt-show">
-                    <div class="Color-Red">Size: </div>
-                    <div class="Color-Size">Xll</div>
-                </div>
-            </div>
-        </div>
-        <div class="meinblock__product-details">
-            <ul class="meinblock__titel-and">
-                <li>$150</li>
-                <li class="Quantity"><input class="input-Quantity" type="number"></li>
-                <li>Free</li>
-                <li>$300</li>
-                <li><i class="fas fa-times-circle delete"></i>
-                </li>
-            </ul>
-        </div>
-    </div>
-    <div class="header-line"></div>
-    <div class="meinblock__product">
-        <div class="meinblock__product-Shirt">
-            <a class="meinblock__product-Shirt-foto" href="#"><img src="mainblock/Ti_Shirt3.jpg" height="115" width="100" alt="Ti-Shirt foto"/></a>
-            <div class="meinblock__product-Shirt-color">
-                <h3 class="MangoT-shirt">Mango People T-shirt</h3>
-                <div class="MangoT-shirt-show">
-                    <div class="Color-Red">Color: </div>
-                    <div class="Color-Size">Red</div>
-                </div>
-                <div class="MangoT-shirt-show">
-                    <div class="Color-Red">Size: </div>
-                    <div class="Color-Size">Xll</div>
-                </div>
-            </div>
-        </div>
-        <div class="meinblock__product-details">
-            <ul class="meinblock__titel-and">
-                <li>$150</li>
-                <li class="Quantity"><input class="input-Quantity" type="number"></li>
-                <li>Free</li>
-                <li>$300</li>
-                <li><i class="fas fa-times-circle delete"></i>
-                </li>
-            </ul>
-        </div>
-    </div>
-    <div class="header-line"></div>
-    <div class="meinblock__shopping">
-        <input class="meinblock__shopping-clear" type="button" value="CLEAR SHOPPING CART">
-        <input class="meinblock__shopping-continue" type="button" value="CONTINUE CHOPPING">
-    </div>
-    <div class="meinblock__checkout">
-        <form class="meinblock__checkout-buyer">
-            <h2 class="meinblock__checkout-name">Shipping Adress</h2>
-            <input class="meinblock__checkout-adress" type="text" name="Country" placeholder="Russian"><br/>
-            <input class="meinblock__checkout-adress" type="text" name="State" placeholder="State"><br/>
-            <input class="meinblock__checkout-adress" type="text" name="Postcode" placeholder="Postcode/ Zip"><br/>
-            <input class="meinblock__checkout-quote" type="text" name="Quote" placeholder="Get a quote">
-        </form>
-        <form class="meinblock__checkout-coupon">
-            <h2 class="meinblock__checkout-name">coupon discount</h2>
-            <label class="meinblock__checkout-enter" for="Coupon"><br/>Enter your coupon code if you have one</label><br/>
-            <input class="meinblock__checkout-adress" type="text" name="State" placeholder="State"><br/>
-            <input class="meinblock__checkout-apply" type="text" name="Coupon" placeholder="Apply Coupon">
-        </form>
-        <div class="meinblock_checkout-bill">
-          <div class="meinblock_checkout-bill-total">Sub total    $900</div>
-          <div class="meinblock_checkout-bill-grandtotal">GRAND TOTAL   <span>$900</span></div>
-            <div class="header-line"></div>
-            <input class="meinblock__checkout-buy" type="text" name="Checkout" placeholder="proceed to checkout"></input>
-        </div>
-    </div>
-
 </div>
 
+<div class="meinblock__buyerinfo container">
+    <div class="meinblock__buyerinfo-Adress">01. Shipping Adress</div>
+     <div class="meinblock__buyerinfo-Shoppingadres">
+        <div class="meinblock__buyerinfo-Shoppingadres-Register">Check as a guest or register
+            <h3 class="meinblock__buyerinfo-Shoppingadres-Text">Register with us for futuren convenience</h3>
+            <input class="meinblock__buyerinfo-Shoppingadres-Cseckout" type="radio" name="checkout">    checkout as guest<br/>
+            <input class="meinblock__buyerinfo-Shoppingadres-Cseckout" type="radio" name="register">    register<br/>
+            <h2 class="meinblock__buyerinfo-Shoppingadres-Register">Register and save time!</h2>
+            <h3 class="meinblock__buyerinfo-Shoppingadres-Text">Register with us for future convenience</h3>
+            <h3 class="meinblock__buyerinfo-Shoppingadres-Easy"><a href="#"></a><i class="fas fa-angle-double-right">Fast and easy checkout</i></h3>
+            <h3 class="meinblock__buyerinfo-Shoppingadres-Easy"><a href="#"></a><i class="fas fa-angle-double-right">Easy access to your order history and status</i></h3>
+            <form><input class="meinblock__buyerinfo-Shoppingadres-Button" type="button" value="Continue"></form>
+        </div>
+        <div class="meinblock__buyerinfo-Pasword">Already registed?
+            <h3 class="meinblock__buyerinfo-Shoppingadres-Text">Please log in below</h3>
 
+            <label class="meinblock__buyerinfo-Shoppingadres-Cseckout" for="emeil">EMAIL ADDRESS<em>*</em></label><br/>
+            <input type="text" class="email" name="email"><br/>
 
+            <label class="meinblock__buyerinfo-Shoppingadres-Cseckout" for="password">PASSWORD<em>*</em></label><br/>
+            <input type="text" class="email" name="password"><br/>
+
+            <label class="meinblock__buyerinfo-Requerd" for="requerd"><em>*</em>Required Fileds</label><br/>
+            <form><input type="button" class="meinblock__buyerinfo-Shoppingadres-Button Login" name="login" value="Login"><a href="#">Forgot Password?</a></form>
+
+        </div>
+     </div>
+
+    <div class="header-line"></div>
+    <div class="meinblock__buyerinfo-Method">02. BILLING INFORMATION</div>
+    <div class="header-line"></div>
+    <div class="meinblock__buyerinfo-Method>03. CHOPPING INFORMATION</div>
+    <div class="header-line"></div>
+    <div class="meinblock__buyerinfo-Method">04. CHOPPING METHOD</div>
+    <div class="header-line"></div>
+    <div class="meinblock__buyerinfo-Method">05. PAYMENT METHOD</div>
+    <div class="header-line"></div>
+    <div class="meinblock__buyerinfo-Method">06. ORDER REVIEW</div>
+    <div class="header-line"></div>
+</div>
 
 
 
@@ -242,3 +157,5 @@
 </div>
 </body>
 </html >
+
+
