--- a/Singl Page.html
+++ b/Singl Page.html
@@ -43,132 +43,69 @@
             <a class="header__new-navi-pink" href="#">New Arrivals</a>
         </div>
     </div>
-
 </div>
-<div class="meinblock container">
-    <div class="meinblock__titel">
-        <div>Product Details</div>
-        <div class="meinblock__titel-details">
-            <ul class="meinblock__titel-and">
-                <li>unite Price</li>
-                <li>Quantity</li>
-                <li>Shipping</li>
-                <li>Subtotal</li>
-                <li>Action</li>
-            </ul>
+<div class="mainBlock__WoomenCollechtion">
+    <div class="mainBlock__WoomenCollechtion-background"></div>
+    <div class="mainBlock__WoomenCollechtion-border container">
+        <div class="mainBlock__WoomenCollechtion-border-Women">WOMEN COLLECTION</div>
+        <div class="mainBlock__WoomenCollechtion-border-line"></div>
+        <div class="mainBlock__WoomenCollechtion-border-linepink"></div>
+        <div class="mainBlock__WoomenCollechtion-border-Moschino">Moschino Cheap And Chic</div>
+        <div class="mainBlock__WoomenCollechtion-border-Text">Compellingly actualize fully researched processes before proactive outsourcing. Progressively syndicate collaborative architectures before cutting-edge services. Completely visualize parallel core competencies rather than exceptional portals.</div>
+
+        <div class="mainBlock__WoomenCollechtion-aboutmodell">
+            <div class="mainBlock__WoomenCollechtion-aboutmodell-Material">MATERIAL: <span>COTTON</span></div>
+            <div class="mainBlock__WoomenCollechtion-aboutmodell-Dezigner">DESIGNER: <span>BINBURHAN</span></div>
         </div>
-    </div>
-    <div class="header-line"></div>
-    <div class="meinblock__product">
-        <div class="meinblock__product-Shirt">
-            <a class="meinblock__product-Shirt-foto" href="#"><img src="mainblock/Ti_Shirt1.jpg" height="115" width="100" alt="Ti-Shirt foto"/></a>
-            <div class="meinblock__product-Shirt-color">
-                <h3 class="MangoT-shirt">Mango People T-shirt</h3>
-                <div class="MangoT-shirt-show">
-                    <div class="Color-Red">Color: </div>
-                    <div class="Color-Size">Red</div>
-                </div>
-                <div class="MangoT-shirt-show">
-                    <div class="Color-Red">Size: </div>
-                    <div class="Color-Size">Xll</div>
-                </div>
+        <div class="mainBlock__WoomenCollechtion-Prise">$561</div>
+        <div class="header-line"></div>
+        <div class="mainBlock__WoomenCollechtion-Hcoose">
+            <div class="mainBlock__WoomenCollechtion-Hcoose-Choose">
+              <div class="mainBlock__WoomenCollechtion-Hcoose-Color">CHOOSE COLOR</div>
+                <button class="mainBlock__WoomenCollechtion-Hcoose-button"><i class="fas fa-angle-down"></i></button>
+            </div>
+            <div class="mainBlock__WoomenCollechtion-Hcoose-Choose">
+                <div class="mainBlock__WoomenCollechtion-Hcoose-Color">CHOOSE SIZE</div>
+                <button class="mainBlock__WoomenCollechtion-Hcoose-button"><i class="fas fa-angle-down"></i></button>
+            </div>
+            <div class="mainBlock__WoomenCollechtion-Hcoose-Choose">
+                <div class="mainBlock__WoomenCollechtion-Hcoose-Color">QUANTITY</div>
+                <input type="number" class="mainBlock__WoomenCollechtion-Hcoose-button"></input>
             </div>
         </div>
-        <div class="meinblock__product-details">
-            <ul class="meinblock__titel-and">
-                <li>$150</li>
-                <li class="Quantity"><input class="input-Quantity" type="number"></li>
-                <li>Free</li>
-                <li>$300</li>
-                <li><i class="fas fa-times-circle delete"></i>
-                </li>
-            </ul>
+        <div class="mainBlock__WoomenCollechtion-Cart">
+            <a href="#"><i class="fas fa-shopping-cart" class="mainBlock__WoomenCollechtion-Cart-pink">  Add to Cart</i></a>
         </div>
     </div>
-    <div class="header-line"></div>
-    <div class="meinblock__product">
-        <div class="meinblock__product-Shirt">
-            <a class="meinblock__product-Shirt-foto" href="#"><img src="mainblock/Ti_Shirt2.jpg" height="115" width="100" alt="Ti-Shirt foto"/></a>
-            <div class="meinblock__product-Shirt-color">
-                <h3 class="MangoT-shirt">Mango People T-shirt</h3>
-                <div class="MangoT-shirt-show">
-                    <div class="Color-Red">Color: </div>
-                    <div class="Color-Size">Red</div>
-                </div>
-                <div class="MangoT-shirt-show">
-                    <div class="Color-Red">Size: </div>
-                    <div class="Color-Size">Xll</div>
-                </div>
-            </div>
+</div>
+<div class="SecthinBlock container">
+    <section> you may like also</section>
+    <div class="SecthinBlock__Woomen">
+        <div class="SecthinBlock__Woomen-products">
+            <div class="SecthinBlock__Woomen-products-foto"><a href="#"><img src="../Single page/Single_page_Blaze.png"
+                                                                             /></a></div>
+            <div class="SecthinBlock__Woomen-products-product">BLAZE LEGGINGS</div>
+            <div class="SecthinBlock__Woomen-products-prise">$52.00</div>
         </div>
-        <div class="meinblock__product-details">
-            <ul class="meinblock__titel-and">
-                <li>$150</li>
-                <li class="Quantity"><input class="input-Quantity" type="number"></li>
-                <li>Free</li>
-                <li>$300</li>
-                <li><i class="fas fa-times-circle delete"></i>
-                </li>
-            </ul>
+        <div class="SecthinBlock__Woomen-products">
+            <div class="SecthinBlock__Woomen-products-foto"><a href="#"><img src="../Single page/Alexa.png"/></a></div>
+            <div class="SecthinBlock__Woomen-products-product">ALEXA SWEATER</div>
+            <div class="SecthinBlock__Woomen-products-prise">$52.00</div>
         </div>
-    </div>
-    <div class="header-line"></div>
-    <div class="meinblock__product">
-        <div class="meinblock__product-Shirt">
-            <a class="meinblock__product-Shirt-foto" href="#"><img src="mainblock/Ti_Shirt3.jpg" height="115" width="100" alt="Ti-Shirt foto"/></a>
-            <div class="meinblock__product-Shirt-color">
-                <h3 class="MangoT-shirt">Mango People T-shirt</h3>
-                <div class="MangoT-shirt-show">
-                    <div class="Color-Red">Color: </div>
-                    <div class="Color-Size">Red</div>
-                </div>
-                <div class="MangoT-shirt-show">
-                    <div class="Color-Red">Size: </div>
-                    <div class="Color-Size">Xll</div>
-                </div>
-            </div>
+        <div class="SecthinBlock__Woomen-products">
+            <div class="SecthinBlock__Woomen-products-foto"><a href="#"><img src="../Single page/Single_page_Agnes.png"/></a></div>
+            <div class="SecthinBlock__Woomen-products-product">AGNES TOP</div>
+            <div class="SecthinBlock__Woomen-products-prise">$52.00</div>
         </div>
-        <div class="meinblock__product-details">
-            <ul class="meinblock__titel-and">
-                <li>$150</li>
-                <li class="Quantity"><input class="input-Quantity" type="number"></li>
-                <li>Free</li>
-                <li>$300</li>
-                <li><i class="fas fa-times-circle delete"></i>
-                </li>
-            </ul>
+        <div class="SecthinBlock__Woomen-products">
+            <div class="SecthinBlock__Woomen-products-foto"><a href="#"><img src="../Single page/Singl_page_Sylva.jpg"/></a></div>
+            <div class="SecthinBlock__Woomen-products-product">SYLVA SWEATER</div>
+            <div class="SecthinBlock__Woomen-products-prise">$52.00</div>
         </div>
-    </div>
-    <div class="header-line"></div>
-    <div class="meinblock__shopping">
-        <input class="meinblock__shopping-clear" type="button" value="CLEAR SHOPPING CART">
-        <input class="meinblock__shopping-continue" type="button" value="CONTINUE CHOPPING">
-    </div>
-    <div class="meinblock__checkout">
-        <form class="meinblock__checkout-buyer">
-            <h2 class="meinblock__checkout-name">Shipping Adress</h2>
-            <input class="meinblock__checkout-adress" type="text" name="Country" placeholder="Russian"><br/>
-            <input class="meinblock__checkout-adress" type="text" name="State" placeholder="State"><br/>
-            <input class="meinblock__checkout-adress" type="text" name="Postcode" placeholder="Postcode/ Zip"><br/>
-            <input class="meinblock__checkout-quote" type="text" name="Quote" placeholder="Get a quote">
-        </form>
-        <form class="meinblock__checkout-coupon">
-            <h2 class="meinblock__checkout-name">coupon discount</h2>
-            <label class="meinblock__checkout-enter" for="Coupon"><br/>Enter your coupon code if you have one</label><br/>
-            <input class="meinblock__checkout-adress" type="text" name="State" placeholder="State"><br/>
-            <input class="meinblock__checkout-apply" type="text" name="Coupon" placeholder="Apply Coupon">
-        </form>
-        <div class="meinblock_checkout-bill">
-          <div class="meinblock_checkout-bill-total">Sub total    $900</div>
-          <div class="meinblock_checkout-bill-grandtotal">GRAND TOTAL   <span>$900</span></div>
-            <div class="header-line"></div>
-            <input class="meinblock__checkout-buy" type="text" name="Checkout" placeholder="proceed to checkout"></input>
-        </div>
+
     </div>
 
 </div>
-
-
 
 
 
@@ -242,3 +179,4 @@
 </div>
 </body>
 </html >
+
