--- a/Checkout.html
+++ b/Checkout.html
@@ -25,7 +25,7 @@
 <div class="header-line"></div>
 <div class="TopNav">
     <ul class="menu">
-        <li class="menu-home"><a href="#"></a>home</li>
+        <li class="menu-home"><a href="index.html"></a>home</li>
         <li class="menu-home"><a href="#"></a>man</li>
         <li class="menu-home"><a href="#"></a>women</li>
         <li class="menu-home"><a href="#"></a>kids</li>
@@ -38,7 +38,7 @@
     <div class="header__new container">
         <div class="header__new-arrivals">New Arrivals</div>
         <div class="header__new-navi">
-            <a href="#">Home / </a>
+            <a href="index.html">Home / </a>
             <a href="#">Men / </a>
             <a class="header__new-navi-pink" href="#">New Arrivals</a>
         </div>
@@ -123,7 +123,7 @@
                 Distinctively seize superior initiatives for wireless technologies. Dynamically optimize.</p>
         </div>
         <div class="footerBlock__company footerBlock-menupink">COMPANY
-            <div class="footerBlock-menu"><a href="#"></a>Home</div>
+            <div class="footerBlock-menu"><a href="index.html"></a>Home</div>
             <div class="footerBlock-menu"><a href="#"></a>Shop</div>
             <div class="footerBlock-menu"><a href="#"></a>About</div>
             <div class="footerBlock-menu"><a href="#"></a>Hot in works</div>
