--- a/Produckt.html
+++ b/Produckt.html
@@ -81,89 +81,92 @@
            <div class="meinBlick__choice-product-menu-style">
                <article>Size</article>
                <form>
-                   <input type="radio" name="size" value="XXS">
+                   <input type="checkbox" name="size" value="XXS">
                    <label class="size" >XXS</label>
-                   <input type="radio" name="size" value="XS">
+                   <input type="checkbox" name="size" value="XS">
                    <label class="size" >XS</label>
-                   <input type="radio" name="size" value="S">
+                   <input type="checkbox" name="size" value="S">
                    <label class="size" >S</label>
-                   <input type="radio" name="size" value="M">
+                   <input type="checkbox" name="size" value="M">
                    <label class="size" >M</label>
-                   <input type="radio" name="size" value="L">
+                   <input type="checkbox" name="size" value="L">
                    <label class="size" >L</label>
-                   <input type="radio" name="size" value="XL">
+                   <input type="checkbox" name="size" value="XL">
                    <label class="size" >XL</label>
-                   <input type="radio" name="size" value="XXL">
+                   <input type="checkbox" name="size" value="XXL">
                    <label class="size" >XXL</label>
                </form>
 
            </div>
            <div class="meinBlick__choice-product-menu-style">
                <article>Prise</article>
-               <button class=""></button>
-               <div class="meinBlick__choice-product-style-prise">
+               <input type="range" min="0" max="400" value="250" class="meinBlick__choice-product-menu-range">
+               <div class="meinBlick__choice-product-menu-prise">
                    <span>$52</span>
                    <span>$400</span>
                </div>
            </div>
        </div>
        <div class="meinBlock__choice-product-verticalnave">
-           <form></form>
+           <form>
+               <input type="text" name="verticalnave" placeholder="Sort by">
+               <select name="name">
+                   <option value="name">Name</option>
+               </select>
+           </form>
+           <form>
+               <input type="text" name="verticalnave" placeholder="Show">
+               <select name="show">
+                   <option value="show">09</option>
+               </select>
+           </form>
+
        </div>
        <div class="meinBlock__choice-product-Man">
-           <div class="meinBlick__choice-product-image">
-               <div class="meinBlick__choice-product-image-slider"><a href="#"><img src="../Product/1.png" height="280"
-                                                                                    width="263"/></a></div>
-               <div class="meinBlick__choice-product-name">Mango People T-shirt</div>
-               <div class="meinBlick__choice-product-prise">$52.00</div>
+           <div class="meinBlock__choice-product-Man-image">
+               <div class="meinBlock__choice-product-Man-image-slider"><a href="#"><img src="../Product/1.png"/></a></div>
+               <div class="meinBlock__choice-product-Man-image-name">Mango People T-shirt</div>
+               <div class="meinBlock__choice-product-Man-image-prise">$52.00</div>
            </div>
-           <div class="meinBlick__choice-product-image">
-               <div class="meinBlick__choice-product-image-slider"><a href="#"><img src="../Product/2.jpg" height="280"
-                                                                                    width="263"/></a></div>
-               <div class="meinBlick__choice-product-name">Mango People T-shirt</div>
-               <div class="meinBlick__choice-product-prise">$52.00</div>
+           <div class="meinBlock__choice-product-Man-image">
+               <div class="meinBlock__choice-product-Man-image-slider"><a href="#"><img src="../Product/2.jpg"/></a></div>
+               <div class="meinBlock__choice-product-Man-image-name">Mango People T-shirt</div>
+               <div class="meinBlock__choice-product-Man-image-prise">$52.00</div>
            </div>
-           <div class="meinBlick__choice-product-image">
-               <div class="meinBlick__choice-product-image-slider"><a href="#"><img src="../Product/3.png" height="280"
-                                                                                    width="263"/></a></div>
-               <div class="meinBlick__choice-product-name">Mango People T-shirt</div>
-               <div class="meinBlick__choice-product-prise">$52.00</div>
+           <div class="meinBlock__choice-product-Man-image">
+               <div class="meinBlock__choice-product-Man-image-slider"><a href="#"><img src="../Product/3.png"/></a></div>
+               <div class="meinBlock__choice-product-Man-image-name">Mango People T-shirt</div>
+               <div class="meinBlock__choice-product-Man-image-prise">$52.00</div>
            </div>
-           <div class="meinBlick__choice-product-image">
-               <div class="meinBlick__choice-product-image-slider"><a href="#"><img src="../Product/4.jpg" height="280"
-                                                                                    width="263"/></a></div>
-               <div class="meinBlick__choice-product-name">Mango People T-shirt</div>
-               <div class="meinBlick__choice-product-prise">$52.00</div>
+           <div class="meinBlock__choice-product-Man-image">
+               <div class="meinBlock__choice-product-Man-image-slider"><a href="#"><img src="../Product/4.jpg"/></a></div>
+               <div class="meinBlock__choice-product-Man-image-name">Mango People T-shirt</div>
+               <div class="meinBlock__choice-product-Man-image-prise">$52.00</div>
            </div>
-           <div class="meinBlick__choice-product-image">
-               <div class="meinBlick__choice-product-image-slider"><a href="#"><img src="../Product/5.jpg" height="280"
-                                                                                    width="263"/></a></div>
-               <div class="meinBlick__choice-product-name">Mango People T-shirt</div>
-               <div class="meinBlick__choice-product-prise">$52.00</div>
+           <div class="meinBlock__choice-product-Man-image">
+               <div class="meinBlock__choice-product-Man-image-slider"><a href="#"><img src="../Product/5.jpg"/></a></div>
+               <div class="meinBlock__choice-product-Man-image-name">Mango People T-shirt</div>
+               <div class="meinBlock__choice-product-Man-image-prise">$52.00</div>
            </div>
-           <div class="meinBlick__choice-product-image">
-               <div class="meinBlick__choice-product-image-slider"><a href="#"><img src="../Product/6.jpg" height="280"
-                                                                                    width="263"/></a></div>
-               <div class="meinBlick__choice-product-name">Mango People T-shirt</div>
-               <div class="meinBlick__choice-product-prise">$52.00</div>
+           <div class="meinBlock__choice-product-Man-image">
+               <div class="meinBlock__choice-product-Man-image-slider"><a href="#"><img src="../Product/6.jpg"/></a></div>
+               <div class="meinBlock__choice-product-Man-image-name">Mango People T-shirt</div>
+               <div class="meinBlock__choice-product-Man-image-prise">$52.00</div>
            </div>
-           <div class="meinBlick__choice-product-image">
-               <div class="meinBlick__choice-product-image-slider"><a href="#"><img src="../Product/7.jpg" height="280"
-                                                                                    width="263"/></a></div>
-               <div class="meinBlick__choice-product-name">Mango People T-shirt</div>
-               <div class="meinBlick__choice-product-prise">$52.00</div>
+           <div class="meinBlock__choice-product-Man-image">
+               <div class="meinBlock__choice-product-Man-image-slider"><a href="#"><img src="../Product/7.jpg"/></a></div>
+               <div class="meinBlock__choice-product-Man-image-name">Mango People T-shirt</div>
+               <div class="meinBlock__choice-product-Man-image-prise">$52.00</div>
            </div>
-           <div class="meinBlick__choice-product-image">
-               <div class="meinBlick__choice-product-image-slider"><a href="#"><img src="../Product/8.jpg" height="280"
-                                                                                    width="263"/></a></div>
-               <div class="meinBlick__choice-product-name">Mango People T-shirt</div>
-               <div class="meinBlick__choice-product-prise">$52.00</div>
+           <div class="meinBlock__choice-product-Man-image">
+               <div class="meinBlock__choice-product-Man-image-slider"><a href="#"><img src="../Product/8.jpg"/></a></div>
+               <div class="meinBlock__choice-product-Man-image-name">Mango People T-shirt</div>
+               <div class="meinBlock__choice-product-Man-image-prise">$52.00</div>
            </div>
-           <div class="meinBlick__choice-product-image">
-               <div class="meinBlick__choice-product-image-slider"><a href="#"><img src="../Product/9.jpg" height="280"
-                                                                                    width="263"/></a></div>
-               <div class="meinBlick__choice-product-name">Mango People T-shirt</div>
-               <div class="meinBlick__choice-product-prise">$52.00</div>
+           <div class="meinBlock__choice-product-Man-image">
+               <div class="meinBlock__choice-product-Man-image-slider"><a href="#"><img src="../Product/9.jpg"/></a></div>
+               <div class="meinBlock__choice-product-Man-image-name">Mango People T-shirt</div>
+               <div class="meinBlock__choice-product-Man-image-prise">$52.00</div>
            </div>
        </div>
        <div class="meinBlock__choice-product-pagination">
@@ -182,28 +185,31 @@
    </div>
 </div>
 
-<div class="discountBlock__sales">
-    <div class="discountBlock__sales-Free">
-        <form><i class="fas fa-truck"></i></form>
-        <div class="discountBlock__seles-Freedelivery">
-            <h3>Free Delivery</h3>
-            <p>Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p>
+<div class="informationBlock ">
+    <div class="informationBlock-Produckt container">
+        <div class="discountBlock__sales-Free ">
+            <form><i class="fas fa-truck"></i></form>
+            <div class="discountBlock__seles-Freedelivery">
+                <h3>Free Delivery</h3>
+                <p>Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p>
+            </div>
+        </div>
+        <div class="discountBlock__sales-Free">
+            <form><i class="fas fa-percent"></i></form>
+            <div class="discountBlock__seles-Freedelivery">
+                <h3>Sales & discounts</h3>
+                <p>Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p>
+            </div>
+        </div>
+        <div class="discountBlock__sales-Free">
+            <form><i class="fas fa-crown"></i></form>
+            <div class="discountBlock__seles-Freedelivery">
+                <h3>Quality assurance</h3>
+                <p>Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p>
+            </div>
         </div>
     </div>
-    <div class="discountBlock__sales-Free">
-        <form><i class="fas fa-percent"></i></form>
-        <div class="discountBlock__seles-Freedelivery">
-            <h3>Sales & discounts</h3>
-            <p>Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p>
-        </div>
-    </div>
-    <div class="discountBlock__sales-Free">
-        <form><i class="fas fa-crown"></i></form>
-        <div class="discountBlock__seles-Freedelivery">
-            <h3>Quality assurance</h3>
-            <p>Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p>
-        </div>
-    </div>
+
 </div>
 
 
